# grpc_resource_with_file

./: Cargo.toml  Dockerfile  README.md  build.rs
src/: client.rs  error.rs  server.rs
src/protos/: mod.rs  resource_with_file.proto  resource_with_file.rs  resource_with_file_grpc.rs
